[gd_scene load_steps=50 format=2]

[ext_resource path="res://Textures/FLOOR.png" type="Texture" id=1]
[ext_resource path="res://Textures/player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CameraLogic.gd" type="Script" id=4]
[ext_resource path="res://Textures/OVERVIEW.png" type="Texture" id=5]
[ext_resource path="res://Textures/NOISE1.png" type="Texture" id=6]
[ext_resource path="res://Textures/NOISE2.png" type="Texture" id=7]
[ext_resource path="res://Textures/NOISE3.png" type="Texture" id=8]
[ext_resource path="res://Textures/TRIM.png" type="Texture" id=9]
[ext_resource path="res://Textures/crowd.tres" type="SpriteFrames" id=10]
[ext_resource path="res://Textures/fusionator.tres" type="SpriteFrames" id=11]
[ext_resource path="res://Textures/pressurinator.tres" type="SpriteFrames" id=12]
[ext_resource path="res://Textures/chute_top.tres" type="SpriteFrames" id=13]
[ext_resource path="res://Textures/chute_bottom.tres" type="SpriteFrames" id=14]
[ext_resource path="res://Textures/pipe_left.tres" type="SpriteFrames" id=15]
[ext_resource path="res://Textures/pipe_right.tres" type="SpriteFrames" id=16]
[ext_resource path="res://Textures/DARKNESS.png" type="Texture" id=17]
[ext_resource path="res://Scripts/MainGameScreen.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Fusionator.gd" type="Script" id=19]
[ext_resource path="res://Textures/INTERACT.png" type="Texture" id=20]
[ext_resource path="res://Textures/fusionator_screen.tres" type="SpriteFrames" id=21]
[ext_resource path="res://Textures/FUS_BAR_FG.png" type="Texture" id=22]
[ext_resource path="res://Textures/FUS_BAR_BG.png" type="Texture" id=23]
[ext_resource path="res://Textures/FUS_BAR_FFG.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Pressurinator.gd" type="Script" id=25]
[ext_resource path="res://Textures/pressurinator_screen.tres" type="SpriteFrames" id=26]
[ext_resource path="res://Textures/BAR_PRESSURE_FG.png" type="Texture" id=27]
[ext_resource path="res://Textures/BAR_PRESSURE_FFG.png" type="Texture" id=28]
[ext_resource path="res://Scripts/Crowd.gd" type="Script" id=29]
[ext_resource path="res://Textures/BAR_PR_FFG.png" type="Texture" id=30]
[ext_resource path="res://Textures/BAR_PR_FG.png" type="Texture" id=31]
[ext_resource path="res://Scripts/Overview.gd" type="Script" id=32]
[ext_resource path="res://Textures/overview_screen.tres" type="SpriteFrames" id=33]
[ext_resource path="res://Fonts/Data/time_theme.tres" type="Theme" id=34]
[ext_resource path="res://Scripts/TutorialManager.gd" type="Script" id=35]
[ext_resource path="res://Sounds/cheering.wav" type="AudioStream" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 119, 27 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 91.5, 18 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 119, 56.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 105, 18.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 81, 44 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 64 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 74, 47 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 98, 16.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100.5, 26 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 49.5, 31.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 52, 28 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 59, 42.5 )

[node name="MainGameScreen" type="Node2D"]
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 4 )

[node name="UI" type="Node2D" parent="Camera2D"]
z_index = 100

[node name="Time" type="RichTextLabel" parent="Camera2D/UI"]
margin_left = 240.5
margin_top = 10.5
margin_right = 381.5
margin_bottom = 50.5
theme = ExtResource( 34 )
text = "1 AM
"

[node name="Darkness" type="Sprite" parent="Camera2D"]
visible = false
z_index = 100
texture = ExtResource( 17 )
centered = false

[node name="FusionatorScreen" type="Node2D" parent="Camera2D"]
visible = false
z_index = 50

[node name="AnimatedSprite" type="AnimatedSprite" parent="Camera2D/FusionatorScreen"]
position = Vector2( 10, 10 )
frames = ExtResource( 21 )
frame = 1
playing = true
centered = false

[node name="Bar" type="Node2D" parent="Camera2D/FusionatorScreen"]
position = Vector2( 5, 0 )

[node name="BG" type="Sprite" parent="Camera2D/FusionatorScreen/Bar"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/FusionatorScreen/Bar"]
texture = ExtResource( 22 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/FusionatorScreen/Bar"]
texture = ExtResource( 24 )
centered = false

[node name="PressurinatorScreen" type="Node2D" parent="Camera2D"]
visible = false
z_index = 50

[node name="AnimatedSprite" type="AnimatedSprite" parent="Camera2D/PressurinatorScreen"]
position = Vector2( 10, 10 )
frames = ExtResource( 26 )
frame = 1
playing = true
centered = false

[node name="Bar" type="Node2D" parent="Camera2D/PressurinatorScreen"]
position = Vector2( 5, 0 )

[node name="BG" type="Sprite" parent="Camera2D/PressurinatorScreen/Bar"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/PressurinatorScreen/Bar"]
texture = ExtResource( 27 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/PressurinatorScreen/Bar"]
texture = ExtResource( 28 )
centered = false

[node name="CrowdScreen" type="Node2D" parent="Camera2D"]
visible = false
z_index = 50

[node name="Bar" type="Node2D" parent="Camera2D/CrowdScreen"]
position = Vector2( 5, 0 )

[node name="BG" type="Sprite" parent="Camera2D/CrowdScreen/Bar"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/CrowdScreen/Bar"]
texture = ExtResource( 31 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/CrowdScreen/Bar"]
texture = ExtResource( 30 )
centered = false

[node name="OverviewScreen" type="Node2D" parent="Camera2D"]
visible = false
z_index = 50

[node name="AnimatedSprite" type="AnimatedSprite" parent="Camera2D/OverviewScreen"]
position = Vector2( 10, 10 )
frames = ExtResource( 33 )
playing = true
centered = false

[node name="BarFusion" type="Node2D" parent="Camera2D/OverviewScreen"]
position = Vector2( 5, 70 )

[node name="BG" type="Sprite" parent="Camera2D/OverviewScreen/BarFusion"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/OverviewScreen/BarFusion"]
texture = ExtResource( 22 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/OverviewScreen/BarFusion"]
texture = ExtResource( 24 )
centered = false

[node name="BarPressure" type="Node2D" parent="Camera2D/OverviewScreen"]
position = Vector2( 5, 100 )

[node name="BG" type="Sprite" parent="Camera2D/OverviewScreen/BarPressure"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/OverviewScreen/BarPressure"]
texture = ExtResource( 27 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/OverviewScreen/BarPressure"]
texture = ExtResource( 28 )
centered = false

[node name="BarPublicity" type="Node2D" parent="Camera2D/OverviewScreen"]
position = Vector2( 5, 130 )

[node name="BG" type="Sprite" parent="Camera2D/OverviewScreen/BarPublicity"]
texture = ExtResource( 23 )
centered = false

[node name="FG" type="Sprite" parent="Camera2D/OverviewScreen/BarPublicity"]
texture = ExtResource( 31 )
centered = false
offset = Vector2( 24, 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 268, 11 )

[node name="FFG" type="Sprite" parent="Camera2D/OverviewScreen/BarPublicity"]
texture = ExtResource( 30 )
centered = false

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 0, -140 )
texture = ExtResource( 1 )
centered = false

[node name="Overview" type="Node2D" parent="."]
position = Vector2( 320, 240 )
script = ExtResource( 32 )

[node name="Sprite" type="Sprite" parent="Overview"]
position = Vector2( 0, -80 )
texture = ExtResource( 5 )

[node name="Noise" type="AnimatedSprite" parent="Overview"]
position = Vector2( -5.5, -94 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="MoveBlockArea" type="Area2D" parent="Overview"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overview/MoveBlockArea"]
position = Vector2( -3, -22 )
shape = SubResource( 7 )

[node name="InteractionArea" type="Area2D" parent="Overview"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overview/InteractionArea"]
position = Vector2( -5.5, 8 )
shape = SubResource( 8 )

[node name="TransArea" type="Area2D" parent="Overview"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overview/TransArea"]
position = Vector2( -3, -105.5 )
shape = SubResource( 12 )

[node name="Crowd" type="Node2D" parent="."]
position = Vector2( 430, 0.5 )
script = ExtResource( 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Crowd"]
position = Vector2( 0, -64 )
frames = ExtResource( 10 )
frame = 1
playing = true

[node name="InteractionArea" type="Area2D" parent="Crowd"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crowd/InteractionArea"]
position = Vector2( 0, 8.75 )
shape = SubResource( 6 )

[node name="Cheering" type="AudioStreamPlayer" parent="Crowd"]
stream = ExtResource( 37 )

[node name="Fusionator" type="Node2D" parent="."]
position = Vector2( 640, 480 )
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fusionator"]
position = Vector2( -74.5, -91 )
frames = ExtResource( 11 )

[node name="MoveBlockArea" type="Area2D" parent="Fusionator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fusionator/MoveBlockArea"]
position = Vector2( -81, -44 )
shape = SubResource( 2 )

[node name="InteractionArea" type="Area2D" parent="Fusionator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fusionator/InteractionArea"]
position = Vector2( -88, -64 )
shape = SubResource( 3 )

[node name="TransArea" type="Area2D" parent="Fusionator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fusionator/TransArea"]
position = Vector2( -74, -135 )
shape = SubResource( 13 )

[node name="Pressurinator" type="Node2D" parent="."]
script = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pressurinator"]
position = Vector2( 81.5, -46 )
frames = ExtResource( 12 )

[node name="MoveBlockArea" type="Area2D" parent="Pressurinator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressurinator/MoveBlockArea"]
position = Vector2( 88, 6.5 )
shape = SubResource( 4 )

[node name="InteractionArea" type="Area2D" parent="Pressurinator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressurinator/InteractionArea"]
position = Vector2( 90.5, 16 )
shape = SubResource( 5 )

[node name="ChuteTop" type="Node2D" parent="."]
position = Vector2( 601.5, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ChuteTop"]
position = Vector2( 0, -44 )
frames = ExtResource( 13 )

[node name="MoveBlockArea" type="Area2D" parent="ChuteTop"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChuteTop/MoveBlockArea"]
position = Vector2( -11, 21.5 )
shape = SubResource( 10 )

[node name="ChuteBottom" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="ChuteBottom"]
position = Vector2( 39, 453.5 )
frames = ExtResource( 14 )

[node name="MoveBlockArea" type="Area2D" parent="ChuteBottom"]
position = Vector2( 0, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChuteBottom/MoveBlockArea"]
position = Vector2( 52, 355 )
shape = SubResource( 11 )

[node name="PipeLeft" type="Node2D" parent="."]
position = Vector2( 0, 200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PipeLeft"]
position = Vector2( 42.5, 0 )
frames = ExtResource( 15 )

[node name="MoveBlockArea" type="Area2D" parent="PipeLeft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeLeft/MoveBlockArea"]
position = Vector2( 49, -0.5 )
shape = SubResource( 9 )

[node name="PipeRight" type="Node2D" parent="."]
position = Vector2( 640, 200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PipeRight"]
position = Vector2( -42.5, 0 )
frames = ExtResource( 16 )

[node name="MoveBlockArea" type="Area2D" parent="PipeRight"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeRight/MoveBlockArea"]
position = Vector2( -50, -0.5 )
shape = SubResource( 9 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 320, 340 )
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 0, -40 )
frames = ExtResource( 2 )

[node name="InteractSprite" type="Sprite" parent="Player"]
visible = false
position = Vector2( 40.5, -80.5 )
texture = ExtResource( 20 )

[node name="Door" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 320, 480 )

[node name="Sprite" type="Sprite" parent="Door"]
position = Vector2( 0, -48 )
texture = ExtResource( 9 )

[node name="TutorialManager" type="Node" parent="."]
script = ExtResource( 35 )

[node name="ClipPlayer" type="AudioStreamPlayer" parent="TutorialManager"]
